--- a/src/main/resources/root.fxml
+++ b/src/main/resources/root.fxml
@@ -3,14 +3,21 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<fx:root prefHeight="400.0" prefWidth="600.0" type="AnchorPane"
-  xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<fx:root prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <center>
-        <Canvas fx:id="canvas" height="200.0" width="200.0" BorderPane.alignment="CENTER"/>
+        <Canvas fx:id="canvas" height="200.0" width="200.0" BorderPane.alignment="CENTER" />
       </center>
+         <right>
+            <VBox fx:id="verticalLayerBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+         </right>
+         <top>
+            <HBox fx:id="horizontalToolBar" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </top>
     </BorderPane>
   </children>
 </fx:root>
