--- a/src/main/resources/layer_item.fxml
+++ b/src/main/resources/layer_item.fxml
@@ -25,7 +25,7 @@
                <graphic>
                   <ImageView fx:id="imageView" fitHeight="49.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../Downloads/icons8-eye-32.png" />
+                        <Image url="images/icons8-eye-32.png" />
                      </image>
                   </ImageView>
                </graphic>
