--- a/src/main/resources/root.fxml
+++ b/src/main/resources/root.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
 <fx:root prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
@@ -13,11 +11,8 @@
         <Canvas fx:id="canvas" height="200.0" width="200.0" BorderPane.alignment="CENTER" />
       </center>
          <right>
-            <VBox fx:id="verticalLayerBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+            <AnchorPane fx:id="verticalAnchorPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
          </right>
-         <top>
-            <HBox fx:id="horizontalToolBar" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-         </top>
     </BorderPane>
   </children>
 </fx:root>
