--- a/src/main/resources/layer_item.fxml
+++ b/src/main/resources/layer_item.fxml
@@ -25,7 +25,7 @@
       </HBox>
       <HBox alignment="CENTER_RIGHT" layoutX="450.0" layoutY="-2.0" prefHeight="115.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ToggleButton fx:id="toggleButton" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" selected="true">
+            <ToggleButton fx:id="toggleButton" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#toggleVisibility" selected="true">
                <graphic>
                   <ImageView fx:id="imageView" fitHeight="49.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true">
                      <image>
