--- a/src/main/resources/root.fxml
+++ b/src/main/resources/root.fxml
@@ -4,20 +4,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<fx:root prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="600.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <center>
         <Canvas fx:id="canvas" height="200.0" width="200.0" BorderPane.alignment="CENTER" />
       </center>
          <right>
-            <AnchorPane fx:id="rightAnchorPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <AnchorPane fx:id="rightAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="pane" BorderPane.alignment="CENTER" />
          </right>
          <top>
-            <AnchorPane fx:id="topAnchorPane" prefHeight="64.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <AnchorPane fx:id="topAnchorPane" prefHeight="64.0" prefWidth="200.0" styleClass="pane" BorderPane.alignment="CENTER" />
          </top>
          <left>
-            <AnchorPane fx:id="leftAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="64.0" BorderPane.alignment="CENTER" />
+            <AnchorPane fx:id="leftAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="64.0" styleClass="pane" BorderPane.alignment="CENTER" />
          </left>
     </BorderPane>
   </children>
