--- a/src/main/resources/root.fxml
+++ b/src/main/resources/root.fxml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<fx:root prefHeight="400.0" prefWidth="600.0" stylesheets="@styling/stylesheet.css"
-  type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root prefHeight="1080.0" prefWidth="1920.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <center>
-        <Canvas fx:id="canvas" height="200.0" width="200.0" BorderPane.alignment="CENTER"/>
-      </center>
+    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <right>
-        <AnchorPane fx:id="rightAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="pane"
-          BorderPane.alignment="CENTER"/>
+        <AnchorPane fx:id="rightAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="pane" BorderPane.alignment="CENTER" />
       </right>
       <top>
-        <AnchorPane fx:id="topAnchorPane" prefHeight="64.0" prefWidth="200.0" styleClass="pane"
-          BorderPane.alignment="CENTER"/>
+        <AnchorPane fx:id="topAnchorPane" prefHeight="64.0" prefWidth="200.0" styleClass="pane" BorderPane.alignment="CENTER" />
       </top>
       <left>
-        <AnchorPane fx:id="leftAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
-          prefWidth="64.0" styleClass="pane" BorderPane.alignment="CENTER"/>
+        <AnchorPane fx:id="leftAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="64.0" styleClass="pane" BorderPane.alignment="CENTER" />
       </left>
+         <center>
+            <AnchorPane fx:id="centerPane" cache="true" cacheHint="SPEED" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="pane" BorderPane.alignment="CENTER" />
+         </center>
     </BorderPane>
   </children>
 </fx:root>
