--- a/src/main/resources/layer_pane.fxml
+++ b/src/main/resources/layer_pane.fxml
@@ -6,29 +6,25 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<fx:root prefHeight="400.0" prefWidth="236.0" styleClass="pane"
-  stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171"
-  xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root prefHeight="400.0" prefWidth="236.0" styleClass="pane" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <StackPane fx:id="stackPane" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <StackPane fx:id="stackPane" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-        <VBox prefHeight="200.0" prefWidth="100.0">
-          <children>
-            <Label alignment="CENTER" text="Layer Manager" textAlignment="CENTER">
-              <font>
-                <Font size="36.0"/>
-              </font>
-            </Label>
-          </children>
-        </VBox>
         <ScrollPane prefHeight="200.0" prefWidth="200.0">
           <content>
-            <VBox fx:id="layerItemVBox" alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308"
-              maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-              spacing="5.0"/>
+            <VBox fx:id="layerItemVBox" alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0" />
           </content>
         </ScrollPane>
+            <AnchorPane fx:id="emptyLayerPane" prefHeight="200.0" prefWidth="200.0">
+               <children>
+            <Label alignment="CENTER" prefHeight="41.0" prefWidth="236.0" text="Layer Manager" textAlignment="CENTER">
+              <font>
+                <Font size="36.0" />
+              </font>
+            </Label>
+               </children>
+            </AnchorPane>
       </children>
     </StackPane>
   </children>
