--- a/src/main/resources/toolbar.fxml
+++ b/src/main/resources/toolbar.fxml
@@ -8,15 +8,14 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0"
-  stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171"
-  xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0"
-      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
         <MenuBar>
           <menus>
@@ -24,10 +23,9 @@
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit">
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/exit.png"/>
+                        <Image url="@images/light/exit.png" />
                       </image>
                     </ImageView>
                   </graphic>
@@ -35,48 +33,69 @@
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Delete"/>
-              </items>
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#undo" text="Undo">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                           <graphic>
+                              <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/light/undo.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#redo" text="Redo">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="DOWN" shortcut="UP" />
+                           </accelerator>
+                           <graphic>
+                              <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/light/redo.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </MenuItem>
+                     </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
               <items>
-                <MenuItem mnemonicParsing="false" text="About"/>
+                <MenuItem mnemonicParsing="false" text="About" />
               </items>
             </Menu>
           </menus>
         </MenuBar>
         <HBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="200.0" spacing="10.0">
           <children>
-            <Button mnemonicParsing="false">
+            <Button mnemonicParsing="false" onAction="#undo">
               <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                    <Image url="@images/light/undo.png"/>
+                    <Image url="@images/light/undo.png" />
                   </image>
                 </ImageView>
               </graphic>
               <tooltip>
-                <Tooltip text="Undo"/>
+                <Tooltip text="Undo" />
               </tooltip>
             </Button>
-            <Button mnemonicParsing="false">
+            <Button mnemonicParsing="false" onAction="#redo">
               <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                    <Image url="@images/light/redo.png"/>
+                    <Image url="@images/light/redo.png" />
                   </image>
                 </ImageView>
               </graphic>
               <tooltip>
-                <Tooltip text="Redo"/>
+                <Tooltip text="Redo" />
               </tooltip>
             </Button>
           </children>
           <padding>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
           </padding>
         </HBox>
       </children>
