--- a/src/main/resources/toolbar.fxml
+++ b/src/main/resources/toolbar.fxml
@@ -11,12 +11,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0"
-  stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171"
-  xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0"
-      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
         <MenuBar>
           <menus>
@@ -24,24 +22,24 @@
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit">
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/exit.png"/>
+                        <Image url="@images/light/exit.png" />
                       </image>
                     </ImageView>
                   </graphic>
                 </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#importImage" text="Import image" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
               <items>
-                <MenuItem mnemonicParsing="false" text="Delete"/>
+                <MenuItem mnemonicParsing="false" text="Delete" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
               <items>
-                <MenuItem mnemonicParsing="false" text="About"/>
+                <MenuItem mnemonicParsing="false" text="About" />
               </items>
             </Menu>
           </menus>
@@ -50,33 +48,31 @@
           <children>
             <Button mnemonicParsing="false">
               <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                    <Image url="@images/light/undo.png"/>
+                    <Image url="@images/light/undo.png" />
                   </image>
                 </ImageView>
               </graphic>
               <tooltip>
-                <Tooltip text="Undo"/>
+                <Tooltip text="Undo" />
               </tooltip>
             </Button>
             <Button mnemonicParsing="false">
               <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                    <Image url="@images/light/redo.png"/>
+                    <Image url="@images/light/redo.png" />
                   </image>
                 </ImageView>
               </graphic>
               <tooltip>
-                <Tooltip text="Redo"/>
+                <Tooltip text="Redo" />
               </tooltip>
             </Button>
           </children>
           <padding>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
           </padding>
         </HBox>
       </children>
