Added CSS rule for disabled menu items

--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -124,3 +124,8 @@
 .menu-item:pressed {
   -fx-background-color: -background-pressed-color;
 }
+
+.menu-item:disabled {
+  -fx-cursor: default;
+  -fx-background-color: -background-color;
+}
