--- a/src/main/resources/layer_item.fxml
+++ b/src/main/resources/layer_item.fxml
@@ -72,7 +72,7 @@
                         <Insets bottom="4.0" top="4.0" />
                      </VBox.margin>
               </ToggleButton>
-                  <Button mnemonicParsing="false" onAction="#increaseZIndex">
+                  <Button mnemonicParsing="false" onAction="#removeLayer">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
