--- a/src/main/resources/layer_item.fxml
+++ b/src/main/resources/layer_item.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -11,74 +10,44 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <fx:root id="layer-item" fx:id="rootPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onContextMenuRequested="#openContextMenu" onMouseClicked="#updateActiveLayer" onMousePressed="#handleMouseEvent" prefHeight="76.0" prefWidth="225.0" styleClass="pane" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <HBox alignment="CENTER_LEFT" layoutX="-2.0" nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
       <children>
-            <VBox alignment="TOP_CENTER" prefWidth="76.0">
-               <children>
-              <Label fx:id="textLabel" onInputMethodTextChanged="#updateLayerName" text="Rectangle">
-                <font>
-                  <Font size="24.0" />
-                </font>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                     <contextMenu>
-                        <ContextMenu fx:id="contextMenu">
-                          <items>
-                            <MenuItem mnemonicParsing="false" onAction="#removeLayer" text="Delete Layer" />
-                              <MenuItem mnemonicParsing="false" text="Rename Layer" />
-                          </items>
-                        </ContextMenu>
-                     </contextMenu>
-              </Label>
-                  <ImageView fx:id="layerTypeIcon" fitHeight="46.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/light/raster.png" />
-                     </image>
-                  </ImageView>
-               </children>
+        <Label fx:id="textLabel" alignment="CENTER" onInputMethodTextChanged="#updateLayerName" prefHeight="57.0" prefWidth="85.0" text="Rectangle" textAlignment="CENTER">
+          <font>
+            <Font size="24.0" />
+          </font>
+               <contextMenu>
+                  <ContextMenu fx:id="contextMenu">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#removeLayer" text="Delete Layer" />
+                        <MenuItem mnemonicParsing="false" text="Rename Layer" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
                <HBox.margin>
-                  <Insets left="20.0" />
+                  <Insets right="5.0" />
                </HBox.margin>
-            </VBox>
-            <VBox alignment="TOP_CENTER">
-               <children>
-              <ToggleButton fx:id="toggleButton" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#toggleVisibility" prefHeight="32.0" prefWidth="42.0" selected="true">
-                <graphic>
-                  <ImageView fx:id="imageView" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" />
-                </graphic>
-                <tooltip>
-                  <Tooltip text="Toggle visibility for this layer" />
-                </tooltip>
-                     <VBox.margin>
-                        <Insets bottom="4.0" top="4.0" />
-                     </VBox.margin>
-              </ToggleButton>
-                  <Button mnemonicParsing="false" onAction="#removeLayer">
-                     <graphic>
-                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/light/trash.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <VBox.margin>
-                        <Insets bottom="4.0" />
-                     </VBox.margin>
-                     <tooltip>
-                        <Tooltip text="Deletes the layer" />
-                     </tooltip>
-                  </Button>
-               </children>
+        </Label>
+            <ImageView fx:id="layerTypeIcon" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/light/raster.png" />
+               </image>
+            </ImageView>
+        <ToggleButton fx:id="toggleButton" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#toggleVisibility" prefHeight="34.0" prefWidth="44.0" selected="true" textAlignment="CENTER">
+          <graphic>
+            <ImageView fx:id="imageView" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
+          </graphic>
+          <tooltip>
+            <Tooltip text="Toggle visibility for this layer" />
+          </tooltip>
                <HBox.margin>
-                  <Insets left="40.0" right="10.0" />
+                  <Insets left="10.0" />
                </HBox.margin>
-            </VBox>
+        </ToggleButton>
       </children>
     </HBox>
   </children>
