--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -157,3 +157,6 @@
   -fx-cursor: CLOSED_HAND;
 }
 
+#info-pane{
+  -fx-background-color: linear-gradient(-background-pressed-color, -background-color);
+}
